2003-07-18  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/gdi-Altitude.xml, opt/gdi-JamRecovery.xml,
	  opt/gdi-Reprint.xml opt/gdi-AllowReprint.xml: Made option
	  descriptions for the "gdi" driver more clear.

	* driver/gdi.xml: Additional text.

2003-07-17  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/gdi.xml, opt/2.xml, gdi-Altitude.xml, opt/gdi-Copies.xml,
	  opt/gdi-Density.xml, opt/gdi-Economode.xml,
	  opt/gdi-JamRecovery.xml, opt/gdi-Manualfeed.xml,
	  opt/gdi-MediaType.xml, opt/gdi-PageSizeJCL.xml,
	  opt/gdi-PageSizePS.xml, opt/gdi-PageSize.xml,
	  opt/gdi-PageTimeout.xml, opt/gdi-PowerSaveTime.xml,
	  opt/gdi-PowerSaving.xml, opt/gdi-Reprint.xml, opt/gdi-RET.xml:
	  Complete option set for Samsung's "gdi" driver.
	
2003-07-02  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/foo2zjs.xml, printer/Minolta-Color_PageWorks_Pro_L.xml,
	  opt/foo2zjs-ICM.xml, opt/foo2zjs-InputSlot.xml: Added Minolta
	  Color PageWorks Pro L color laser printer (Thanks to Rick
	  Richardson).

2003-06-28  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-OfficeJet_4105.xml, printer/HP-OfficeJet_4115.xml:
	  Added the HP OfficeJet 4105/4115 multi-function devices.

	* printer/HP-OfficeJet_4110.xml: Text update.
	
	* printer/Canon-LBP-470.xml: Added the Canon LBP-470.

	* printer/Canon-LIPS-IV.xml, printer/Canon-LIPS-IVv.xml: Text
	  updates (LIPS 4 is a vector PDL).

	* driver/lips4.xml, driver/lips4v.xml: Text updates, printer list
	  updates.

	* opt/jap-Resolution.xml: 600 dpi default resolution for LIPS 4
	  printers.

	* opt/jap-PageSize.xml: More paper sizes for japanese printers.

	* driver/gdi.xml, opt/gdi-Economode.xml: Samsung "gdi" driver:
	  Added "Economode" option, text update.

2003-06-27  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-OfficeJet_4110.xml: Added the HP OfficeJet 4110
	  multi-function devices.

2003-06-26  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-PSC_2175.xml: Added the HP PSC 2175 multi-function
	  device.
