@@ -11,16 +11,21 @@
     </resolution>
     <consumables>
       <comments>
-        <en>Cartridge</en>
+        <en>Toner and drum in one cartridge</en>
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
   <url>http://www.hp.com/cposupport/eschome.html</url>
   <lang>
     <postscript level="2">
-    <!--unknown ppd filename "ppd"--></postscript>
+      <ppd>http://www.linuxprinting.org/download/PPD/HP/0.4/English/HP_LaserJet_4050_Series.ppd</ppd>
+    </postscript>
+    <pcl level="6" />
     <pjl/>
-  <!--No "text"?--></lang>
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
   <autodetect>
     <parallel>
       <commandset>PJL,MLC,PCL,PCLXL,POSTSCRIPT</commandset>
@@ -33,19 +38,22 @@
   <driver>Postscript</driver><!--verified--><!--affiliate keys; modify and face my wrath!-->
   <buyit>amz:B00000JFMZ,amz(N):B00000JHYT,outpost(N):71883,buy:30752buy(N):10060589</buyit><!--no "contrib_url"-->
   <comments>
-    <en>Great printer for heavy printing needs.
-Fast, reliable, jam proof.
-Handles duplex/simplex great with linux (duplex is a rather expensive option).
-&lt;p&gt;
-Basically a great workhorse of a printer.
-&lt;p&gt;
-Various flavours are available, as is the HP way.  The 4050N includes Ethernet.
-&lt;p&gt;
-This printer is a native PostScript
-printer, so the best is to use it
-with CUPS and the PPD file delivered 
-with the printer. So the printer
-gets exactly the possibilties which
-one has under Windows or MacOS.</en>
+    <en>
+
+    Great printer for heavy printing needs.  Fast, reliable, jam
+    proof.  Handles duplex/simplex great with linux (duplex is a
+    rather expensive option).&lt;p&gt;
+
+    Basically a great workhorse of a printer.&lt;p&gt;
+
+    Various flavours are available, as is the HP way.  The 4050N
+    includes Ethernet.&lt;p&gt;
+
+    This printer is a native PostScript printer, so the best is to use
+    it with the PPD file delivered with the printer. So the printer
+    gets exactly the possibilties which one has under Windows or
+    MacOS.&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
