@@ -1,3 +1,8 @@
+2003-07-19  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-LaserJet_4050.xml: Cleaned up text, added URL of
+	  manufacturer-supplied PPD.
+
 2003-07-18  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* opt/gdi-Altitude.xml, opt/gdi-JamRecovery.xml,
